# libcmathext

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
src/combinatorio/: combinatorio.cpp  combinatorio.h
src/fibonacci/: a.out  fibonacci.cpp  fibonacci.h  test.cpp
src/gauss/: gauss.cpp  gauss.h
src/graph/: graph.cpp  graph.h
src/graph/mfset/: mfset.cpp  mfset.h
src/graph/node/: node.cpp  node.h
src/libcmathext/: libcmathext.cpp  libcmathext.h
src/mcd/: mcd.cpp  mcd.h
src/mcm/: mcm.cpp  mcm.h
src/polygon/: polygon.cpp  polygon.h
src/prime/: prime.cpp  prime.h
src/sum/: sum.cpp  sum.h
tests/: test.cpp
